c4prj2_input/grade.txt
Grading at Sat 07 Oct 2023 10:39:11 AM UTC
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:43:5: error: ‘deck_ts’ undeclared (first use in this function); did you mean ‘deck_t’?
   43 |     deck_ts = realloc(deck_ts, sizeof(*deck_ts)*(*n_hands+1));
      |     ^~~~~~~
      |     deck_t
input.c:43:5: note: each undeclared identifier is reported only once for each function it appears in
input.c:32:13: error: unused variable ‘decks’ [-Werror=unused-variable]
   32 |   deck_t ** decks = NULL;
      |             ^~~~~
input.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
